--- a/.daggerx/templates/mod-light/tests/err.go.tmpl
+++ b/.daggerx/templates/mod-light/tests/err.go.tmpl
@@ -8,7 +8,7 @@ import (
 
 // Constants for module name and emoji representations for different types of messages.
 const (
-	ModuleName = "ModuleTemplateLightTests🧪"
+	ModuleName = "{{.module_name}}Tests🧪"
 	ErrorEmoji = "❌"
 )
 
