--- a/.daggerx/templates/mod-light/module/commands.go.tmpl
+++ b/.daggerx/templates/mod-light/module/commands.go.tmpl
@@ -3,7 +3,7 @@ package main
 import (
 	"context"
 
-	"github.com/Excoriate/daggerverse/module-template-light/internal/dagger"
+	"github.com/Excoriate/daggerverse/{{.module_name_pkg}}/internal/dagger"
 )
 
 // OpenTerminal returns a terminal
@@ -25,7 +25,7 @@ func (m *ModuleTemplateLight) OpenTerminal() *dagger.Container {
 // Returns:
 // - string: The output of the command.
 // - error: An error if the command fails.
-func (m *ModuleTemplateLight) RunShell(cmd string) (string, error) {
+func (m *{{.module_name}}) RunShell(cmd string) (string, error) {
 	out, err := m.
 		Ctr.
 		WithoutEntrypoint().
