--- a/.daggerx/templates/mod-light/module/err.go.tmpl
+++ b/.daggerx/templates/mod-light/module/err.go.tmpl
@@ -8,7 +8,7 @@ import (
 
 // Constants for module name and emoji representations for different types of messages.
 const (
-	ModuleName = "ModuleTemplateLight"
+	ModuleName = "{{.module_name}}"
 	ErrorEmoji = "❌"
 )
 
