--- a/.daggerx/templates/mod-light/module/main.go.tmpl
+++ b/.daggerx/templates/mod-light/module/main.go.tmpl
@@ -1,4 +1,4 @@
-// Package main provides the ModuleTemplateLight Dagger module and related functions.
+// Package main provides the {{.module_name}} Dagger module and related functions.
 //
 // This module has been generated via dagger init and serves as a reference to
 // basic module structure as you get started with Dagger. The module demonstrates
@@ -11,21 +11,21 @@
 package main
 
 import (
-	"github.com/Excoriate/daggerverse/module-template-light/internal/dagger"
+	"github.com/Excoriate/daggerverse/{{.module_name_pkg}}/internal/dagger"
 
 	"github.com/Excoriate/daggerx/pkg/containerx"
 	"github.com/Excoriate/daggerx/pkg/envvars"
 )
 
-// ModuleTemplateLight is a Dagger module.
+// {{.module_name}} is a Dagger module.
 //
 // This module is used to create and manage containers.
-type ModuleTemplateLight struct {
+type {{.module_name}} struct {
 	// Ctr is the container to use as a base container.
 	Ctr *dagger.Container
 }
 
-// New creates a new ModuleTemplateLight module.
+// New creates a new {{.module_name}} module.
 //
 // Parameters:
 // - version: The version of the GoReleaser to use, e.g., "v1.22.0". Optional parameter.
@@ -34,7 +34,7 @@ type ModuleTemplateLight struct {
 // - envVarsFromHost: A list of environment variables to pass from the host to the container in a
 // slice of strings. Optional parameter.
 //
-// Returns a pointer to a ModuleTemplateLight instance and an error, if any.
+// Returns a pointer to a {{.module_name}} instance and an error, if any.
 func New(
 	// version (image tag) to use for the container image.
 	// +optional
@@ -48,9 +48,9 @@ func New(
 	// envVarsFromHost is a list of environment variables to pass from the host to the container in a slice of strings.
 	// +optional
 	envVarsFromHost []string,
-) (*ModuleTemplateLight, error) {
+) (*{{.module_name}}, error) {
 	//nolint:exhaustruct // It's 'okaysh' for now, I'll decide later what's going to be the pattern here.
-	dagModule := &ModuleTemplateLight{}
+	dagModule := &{{.module_name}}{}
 
 	if ctr != nil {
 		dagModule.Ctr = ctr
@@ -85,7 +85,7 @@ func New(
 // The default image is "alpine/latest" and the default version is "latest".
 //
 //nolint:nolintlint,revive // This is a method that is used to set the base image and version.
-func (m *ModuleTemplateLight) Base(imageURL string) *ModuleTemplateLight {
+func (m *{{.module_name}}) Base(imageURL string) *{{.module_name}} {
 	c := dag.
 		Container().
 		From(imageURL)
@@ -98,7 +98,7 @@ func (m *ModuleTemplateLight) Base(imageURL string) *ModuleTemplateLight {
 // getImageURL gets the image URL and validates it.
 //
 // If the image URL is not valid, it returns an error.
-func (m *ModuleTemplateLight) getImageURL(image, version string) (string, error) {
+func (m *{{.module_name}}) getImageURL(image, version string) (string, error) {
 	imageURL, err := containerx.GetImageURL(&containerx.NewBaseContainerOpts{
 		Image:           image,
 		Version:         version,
