--- a/.daggerx/templates/mod-light/tests/apis.go.tmpl
+++ b/.daggerx/templates/mod-light/tests/apis.go.tmpl
@@ -4,7 +4,7 @@ import (
 	"context"
 	"strings"
 
-	"github.com/Excoriate/daggerverse/module-template-light/tests/internal/dagger"
+	"github.com/Excoriate/daggerverse/{{.module_name_pkg}}/tests/internal/dagger"
 )
 
 // TestWithContainer tests if the container is set correctly.
@@ -57,7 +57,7 @@ func (m *Tests) TestWithContainer(ctx context.Context) error {
 //
 // This is a helper method for tests, in order to get a terminal for testing purposes.
 func (m *Tests) TestTerminal() *dagger.Container {
-	targetModule := dag.ModuleTemplateLight()
+	targetModule := dag.{{.module_name}}()
 
 	_, _ = targetModule.
 		Ctr().
@@ -73,7 +73,7 @@ func (m *Tests) TestTerminal() *dagger.Container {
 // This is a helper method for tests, in order to test if the env vars are passed correctly in the constructor.
 func (m *Tests) TestPassingEnvVarsInConstructor(ctx context.Context) error {
 	targetModule := dag.
-		ModuleTemplateLight(dagger.ModuleTemplateLightOpts{
+		{{.module_name}}(dagger.{{.module_name}}Opts{
 			EnvVarsFromHost: []string{"HOST=localhost", "PORT=8080", "USER=me", "PASS=1234"},
 		})
 
@@ -106,18 +106,18 @@ func (m *Tests) TestPassingEnvVarsInConstructor(ctx context.Context) error {
 // This is a helper method for tests, in order to test if the env vars are passed correctly in the API.
 func (m *Tests) TestWithEnvironmentVariable(ctx context.Context) error {
 	targetModule := dag.
-		ModuleTemplateLight().
-		WithEnvironmentVariable("HOST", "localhost", dagger.ModuleTemplateLightWithEnvironmentVariableOpts{
+		{{.module_name}}().
+		WithEnvironmentVariable("HOST", "localhost", dagger.{{.module_name}}WithEnvironmentVariableOpts{
 			Expand: false,
 		})
 
 	targetModule = targetModule.
-		WithEnvironmentVariable("PORT", "8080", dagger.ModuleTemplateLightWithEnvironmentVariableOpts{
+		WithEnvironmentVariable("PORT", "8080", dagger.{{.module_name}}WithEnvironmentVariableOpts{
 			Expand: false,
 		})
 
 	targetModule = targetModule.
-		WithEnvironmentVariable("USER", "me", dagger.ModuleTemplateLightWithEnvironmentVariableOpts{
+		WithEnvironmentVariable("USER", "me", dagger.{{.module_name}}WithEnvironmentVariableOpts{
 			Expand: false,
 		})
 
@@ -152,7 +152,7 @@ func (m *Tests) TestWithEnvironmentVariable(ctx context.Context) error {
 // TestWithSource tests if the source directory is set correctly.
 func (m *Tests) TestWithSource(ctx context.Context) error {
 	targetModule := dag.
-		ModuleTemplateLight()
+		{{.module_name}}()
 
 	targetModule.
 		WithSource(m.TestDir)
@@ -197,7 +197,7 @@ func (m *Tests) TestWithSecretAsEnvVar(ctx context.Context) error {
 	secretAnother := dag.SetSecret("ANOTHER_SECRET", "another-secret-value")
 
 	// Initialize the target module and set secrets as environment variables.
-	targetModule := dag.ModuleTemplateLight().
+	targetModule := dag.{{.module_name}}().
 		WithSecretAsEnvVar("AWS_ACCESS_KEY_ID", secretAWS).
 		WithSecretAsEnvVar("GCP_PROJECT_ID", secretGCP).
 		WithSecretAsEnvVar("ANOTHER_SECRET", secretAnother)
@@ -241,7 +241,7 @@ func (m *Tests) TestWithSecretAsEnvVar(ctx context.Context) error {
 //   - error: Returns an error if there is an issue downloading the file, mounting it in the container,
 //     or if the file is not found.
 func (m *Tests) TestWithDownloadedFile(ctx context.Context) error {
-	targetModule := dag.ModuleTemplateLight()
+	targetModule := dag.{{.module_name}}()
 
 	// Download a file from a URL and mount it in the container, without filename passed.
 	fileURL := "https://framerusercontent.com/assets/cNNFYmZqESeYTV5PHp72ay0O2o.zip"
@@ -265,7 +265,7 @@ func (m *Tests) TestWithDownloadedFile(ctx context.Context) error {
 	// Downloading the file but with a name this time instead.
 	fileName := "mydownloadedfile.zip"
 	targetModule = targetModule.
-		WithDownloadedFile(fileURL, dagger.ModuleTemplateLightWithDownloadedFileOpts{
+		WithDownloadedFile(fileURL, dagger.{{.module_name}}WithDownloadedFileOpts{
 			DestFileName: fileName,
 		})
 
@@ -288,12 +288,12 @@ func (m *Tests) TestWithDownloadedFile(ctx context.Context) error {
 
 // TestWithClonedGitRepo tests the WithClonedGitRepo function.
 func (m *Tests) TestWithClonedGitRepo(ctx context.Context) error {
-	targetModule := dag.ModuleTemplateLight()
+	targetModule := dag.{{.module_name}}()
 
 	// This is a public repository, the token isn't required.
 	targetModule = targetModule.
 		WithClonedGitRepo("https://github.com/excoriate/daggerverse",
-			dagger.ModuleTemplateLightWithClonedGitRepoOpts{})
+			dagger.{{.module_name}}WithClonedGitRepoOpts{})
 
 	out, err := targetModule.Ctr().
 		WithExec([]string{"ls", "-l"}).
@@ -329,7 +329,7 @@ func (m *Tests) TestWithClonedGitRepo(ctx context.Context) error {
 //     executing commands in the container, or if the `CACHE_BUSTER` environment variable
 //     is not found in the output.
 func (m *Tests) TestWithCacheBuster(ctx context.Context) error {
-	targetModule := dag.ModuleTemplateLight()
+	targetModule := dag.{{.module_name}}()
 
 	// Set the cache-busting environment variable
 	targetModule = targetModule.WithCacheBuster()
